Implementation of Data Entry indicator on Logistic page

--- a/Web/Views/Shared/_DataActivityIndicator.cshtml
+++ b/Web/Views/Shared/_DataActivityIndicator.cshtml
@@ -1,171 +1,228 @@
 ﻿@using Cats.Helpers
-
-<div class="col-md-12 column " ng-controller="WorkflowActController">
-    <div class="portlet light bordered ">
-
-        <div class="portlet-title">
-            <div class="caption font-green-sharp"><i class="fa fa-data font-green-sharp"></i> @Html.Translate("Data Entry Indicator ")</div>
-            <div class="tools">
-                <a href="#" class="collapse" data-original-title="" title=""></a>
-            </div>
-            <div class="actions">
-                <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""></a>
-            </div>
-        </div>
-        <div class="portlet-body">
-            <div class="table-responsive" style="overflow-x: hidden; min-height: 150px; ">
+@*<script src="~/Scripts/js/jquery-1.11.0.js"></script>
+<script src="~/Scripts/js/bootstrap.min.js"></script>*@
 
 
-                <div class="row col-sm-12">
+@*<link href="~/Scripts/Bootstrap/awesome-bootstrap-checkbox.css" rel="stylesheet" />
 
-                    <div class="col-sm-2 ">
+<link href="~/Scripts/Bootstrap/bootstrap-multiselect.css" rel="stylesheet" />
+<link href="~/Content/assets/css/bootstrap.min.css" rel="stylesheet" />
 
-                        <Label><small>Start Date</small></Label>
-                        <input type="text" class="form-control cats-datepicker2" placeholder="Start Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedStartDate" title="Enter Start Date">
-                    </div>
-                    <div class="col-sm-2 ">
-                        <Label><small>End Date</small></Label>
-                        <input type="text" class="form-control cats-datepicker2" placeholder="End Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedEndDate" title="Enter End Date">
+<link href="~/Scripts/Bootstrap/font-awesome.min.css" rel="stylesheet" />
 
-                    </div>
-
-                    <div class="col-sm-2">
-                        <Label><small>  User</small></Label> <br />
-
-                        <select id="User" multiple="multiple" class="form-control" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedUsers" title="User">
-                            <option ng-repeat="user in controlData.lookupUsers" value="{{user.name}}">{{user.name}}</option>
-                        </select>
-
-                    </div>
-                    <div class="col-sm-2">
-
-
-                        <Label><small>Activity</small></Label><br />
-
-                        <select id="Activity" multiple="multiple" class="form-control" data-toggle="tooltip" data-placement="top" title="Activity" ng-model="filterData.selectedActivities">
-                            <option ng-repeat="activity in controlData.lookupActivities" value="{{activity.name}}">{{activity.name}}</option>
-                        </select>
-
-                    </div>
-
-
-                    <div class="col-sm-2">
-                        <Label><small>Document</small></Label><br />
-                        <select id="Document" class="form-control" data-toggle="tooltip" data-placement="top" title="Document" ng-change="onWorkflowChange()" ng-model="filterData.selectedDocument">
-                            <option ng-repeat="document in controlData.lookupDocument" value="{{document.name}}">{{document.name}}</option>
-
-                        </select>
-                    </div>
-
-                    <div class="col-sm-2 ">
-                        <Label><small> Search</small></Label>
-                        <button type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="top" ng-click="applyFilter()" title="Search"><i class="fa fa-search"></i></button>
-                    </div>
+<script src="~/Scripts/Bootstrap/bootstrap-multiselect.js"></script>*@
 
 
 
 
+    <div class="box box-solid box-primary " ng-app="DataEntryIndicatorApp" ng-controller="WorkflowActController">
+        <div class="portlet light bordered bg-inverse ">
 
-
-
-
-
-
-
+            <div class="portlet-title">
+                <div class="caption font-green-sharp"><i class="fa fa-data font-green-sharp"></i> @Html.Translate("Data Entry Indicator ")</div>
+                <div class="tools">
+                    <a href="#" class="collapse" data-original-title="" title=""></a>
                 </div>
-
-
+                <div class="actions">
+                    <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""></a>
+                </div>
             </div>
-
-            <div class="table-responsive" style="overflow-x: hidden;">
-
-
-                <div class="row col-sm-12">
-                    <div class="row dataEntryIndicatorBody ">
-                        <div class="table-responsive">
-
-                            <div class="col-sm-12">
-
-                                <table class="table table-responsive table-hover table-striped table-bordered table-inverse">
-                                    <thead>
-                                        <tr>
-                                            <th>#</th>
-                                            <th>User/Activity</th>
-
-                                            <th ng-repeat="activities in displayedWorkflowNames">
-                                                {{ activities }}
-                                            </th>
-                                            <th>Total Activity per User</th>
-
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr ng-repeat="user in displayedWorkflowContent track by $index">
-                                            <td scope="row">{{user.index}}</td>
-                                            <td>{{user.userName}}</td>
-                                            <td ng-repeat="actCount in user.activityAndCount track by $index">
-                                                <a ng-click="openDetail(user.userName,$index)">   {{actCount}}</a>
-                                            </td>
-                                            <td>
-                                                {{ user.activityAndCount| rowSum}}
-                                            </td>
-                                      
-                                        </tr>
+            <div class="portlet-body">
+                <span class="loading-spnr-da da-data-indicator-ldng"><img src="~/Content/images/loading.gif" alt="loading..." class="loading-spinner"></span>
 
 
-                                        <tr>
-                                            <th colspan="2">Total</th>
-                                   
+                    <div class="table-responsive" style="overflow-x: hidden; min-height: 330px;">
+                        <div class="row form-horizontal " style="min-height: 100px;">
+                          
 
-                                            <td ng-repeat="activities in displayedWorkflowNames">
-                                                
-                                                {{calcColumnTotal(activities)}}
+                                <div class="col-sm-2 ">
+
+                                    <Label><small>Start Date</small></Label>
+                                    <input type="text" class="form-control cats-datepicker2" placeholder="Start Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedStartDate" title="Enter Start Date">
+                                </div>
+                                <div class="col-sm-2 ">
+                                    <Label><small>End Date</small></Label>
+                                    <input type="text" class="form-control cats-datepicker2" placeholder="End Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedEndDate" title="Enter End Date">
+
+                                </div>
+
+                                <div class="col-sm-2">
+                                    <Label><small>  User</small></Label> 
+
+                                    <select id="User" multiple="multiple" class="form-control" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedUsers" title="User">
+                                        <option ng-repeat="user in controlData.lookupUsers" value="{{user.name}}">{{user.name}}</option>
+                                    </select>
+
+                                </div>
+                                <div class="col-sm-2">
 
 
-                                            </td>
-                                      
+                                    <Label><small>Activity</small></Label>
+                                    <select id="Activity" multiple="multiple" class="form-control" data-toggle="tooltip" data-placement="top" title="Activity" ng-model="filterData.selectedActivities">
+                                        <option ng-repeat="activity in controlData.lookupActivities" value="{{activity.name}}">{{activity.name}}</option>
+                                    </select>
 
-                                        </tr>
+                                </div>
 
-                                    </tbody>
-                                </table>
+
+                                <div class="col-sm-2">
+                                    <Label><small>Document</small></Label>
+                                    <select id="Document" class="form-control" data-toggle="tooltip" data-placement="top" title="Document" ng-change="onWorkflowChange()" ng-model="filterData.selectedDocument">
+                                        <option ng-repeat="document in controlData.lookupDocument" value="{{document.name}}">{{document.name}}</option>
+
+                                    </select>
+                                </div>
+
+                                <div class="col-sm-2 ">
+                                    <Label><small> Search</small></Label>
+                                    <button type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="top" ng-click="applyFilter()" title="Search"><i class="fa fa-search"></i></button>
+                                </div>
+
+
+
+
+
+
+
+
+
+
+
                             </div>
 
 
-                            @*<div class="col-sm-6 well">
-                                    <div>
+                     
+                            <div class="col-sm-12">
+                           
+                                    <div class="table-responsive" ng-if="!InvalidFilter">
 
+                                   
+
+                                            <table class="table table-responsive table-hover table-striped table-bordered table-inverse">
+                                                <thead>
+                                                    <tr>
+                                                        <th>#</th>
+                                                        <th>User/Activity</th>
+
+                                                        <th ng-repeat="activities in displayedWorkflowNames">
+                                                            {{ activities }}
+                                                        </th>
+                                                        <th>Total Activity per User</th>
+
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr ng-repeat="user in displayedWorkflowContent track by $index">
+                                                        <td scope="row">{{user.index}}</td>
+                                                        <td>{{user.userName}}</td>
+                                                        <td ng-repeat="actCount in user.activityAndCount track by $index">
+                                                            <a ng-click="openDetail(user.userName,$index)">   {{actCount}}</a>
+                                                        </td>
+                                                        <td>
+                                                            {{ user.activityAndCount| rowSum}}
+                                                        </td>
+
+                                                    </tr>
+
+
+                                                    <tr>
+                                                        <th colspan="2">Total</th>
+
+
+                                                        <td ng-repeat="activities in displayedWorkflowNames">
+
+                                                            {{calcColumnTotal(activities)}}
+
+
+                                                        </td>
+
+
+                                                    </tr>
+
+                                                </tbody>
+                                            </table>
+                                       
                                     </div>
 
-                                </div>*@
+                                <div class="table-responsive" ng-if="InvalidFilter">
+                                    @*<h2>Filter Entry is not Valid.</h2>*@
+                                   </div>
+                                </div>
+
+                            </div>
+
                         </div>
-
-
                     </div>
+               
+        <script>
+            String.prototype.toCamel = function () {
+                return this.replace(/(\-[a-z])/g, function ($1) { return $.toUpperCase().replace('-', ''); });
+            };
+            //$('#User').multiselect({
 
-                </div>
+            //    templates: { // Use the Awesome Bootstrap Checkbox structure
 
-            </div>
-        </div>
+            //        li: '<li><div class="checkbox"><label></label></div></li>'
+            //    }
+
+            //});
+            //$('#Activity').multiselect({
+
+            //    templates: { // Use the Awesome Bootstrap Checkbox structure
+
+            //        li: '<li><div class="checkbox"><label></label></div></li>'
+            //    }
+
+            //});
+
+            //$('#Document').multiselect({
+
+            //    templates: { // Use the Awesome Bootstrap Checkbox structure
+
+            //        li: '<li><div class="checkbox"><label></label></div></li>'
+            //    }
+
+            //});
+            //$('.multiselect-container div.checkbox').each(function (index) {
+
+            //    var id = 'multiselect-' + index,
+
+            //        $input = $(this).find('input');
+
+            //    // Associate the label and the input
+
+            //    $(this).find('label').attr('for', id);
+
+            //    $input.attr('id', id);
+
+            //    // Remove the input from the label wrapper
+
+            //    $input.detach();
+
+            //    // Place the input back in before the label
+
+            //    $input.prependTo($(this));
+
+            //    $(this).click(function (e) {
+
+            //        // Prevents the click from bubbling up and hiding the dropdown
+
+            //        e.stopPropagation();
+
+            //    });
+
+
+            //});
+        </script>
+
+        <script>
+
+            var urlGetAllTeamUsers = "@Url.Action("GetAllTeamUsers", "WorkflowManager", new { Area = "WorkflowManager" })" + "?pageName=" + "@Html.Raw(ViewBag.PageName)";
+            var urlGetAllWorkflows = "@Url.Action("GetAllWorkflows", "WorkflowManager", new { Area = "WorkflowManager"})" + "?pageName=" + "@Html.Raw(ViewBag.PageName)";
+            var urlGetAllStateTemplate = "@Url.Action("GetAllStateTemplate", "WorkflowManager", new { Area = "WorkflowManager"})" + "?pageName=" + "@Html.Raw(ViewBag.PageName)";
+            var urlGetAllStateTemplate_ = "@Url.Action("GetAllStateTemplate", "WorkflowManager", new { Area = "WorkflowManager"})" + "?workflowName=";
+            var urlGetDataEntryStat = "@Url.Action("GetDataEntryStat", "WorkflowManager", new { Area = "WorkflowManager"})";
+
+        </script>
     </div>
-    <script>
-        String.prototype.toCamel = function () {
-            return this.replace(/(\-[a-z])/g, function ($1) { return $.toUpperCase().replace('-', ''); });
-        };
-         
-        var AngularAppName = '@(ViewBag.AngularAppName)';
-        if (AngularAppName == null || AngularAppName.trim() == '')
-            AngularAppName = "DataActivityIndicatorApp";
-    </script>
-
-    <script>
-
-        var urlGetAllTeamUsers = "@Url.Action("GetAllTeamUsers", "WorkflowManager", new { Area = "WorkflowManager" })" + "?pageName=" + "@Html.Raw(ViewBag.PageName)";
-        var urlGetAllWorkflows="@Url.Action("GetAllWorkflows", "WorkflowManager", new { Area = "WorkflowManager"})" + "?pageName=" + "@Html.Raw(ViewBag.PageName)";
-        var urlGetAllStateTemplate="@Url.Action("GetAllStateTemplate", "WorkflowManager", new { Area = "WorkflowManager"})" + "?pageName=" + "@Html.Raw(ViewBag.PageName)";
-        var urlGetAllStateTemplate_ = "@Url.Action("GetAllStateTemplate", "WorkflowManager", new { Area = "WorkflowManager"})" + "?workflowName=";
-        var urlGetDataEntryStat= "@Url.Action("GetDataEntryStat", "WorkflowManager", new { Area = "WorkflowManager"})";
-
-    </script>
-</div>
 
