--- a/Web/Areas/EarlyWarning/Views/Contribution/Details.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Contribution/Details.cshtml
@@ -4,17 +4,83 @@
 @model  Cats.Models.Contribution
 @{
     ViewBag.Title = "Details";
-    Layout = "~/Views/Shared/_MainLayout.cshtml";    
+    //Layout = "~/Views/Shared/_MainLayout.cshtml";
+    Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
+    ViewBag.PageTitle = Html.Translate("Pledge by Donor: ") + ViewBag.DonorID;
+    ViewBag.PageTitleDescription = "";
 }
 
-@section LeftBar
+<div class="row">
+    <div class="col-md-2">
+        @Html.Partial("_ContributionLeftBar");
+    </div>
+    <div class="col-md-10">
+        <div class="portlet light bordered ">
+            <div class="portlet-title">
+                <div class="caption font-green-sharp">
+                    <i class="icon-list font-green-sharp"></i>
+                    <span class="caption-subject bold uppercase"> @Html.Translate("Pledge Lists")</span>
+                </div>
+                <div class="tools">
+                    <a href="#" class="collapse" data-original-title="" title=""></a>
+                </div>
+                <div class="actions">
+                    
+                    <a class="btn btn-icon-only btn-default fullscreen" href="javascript:;"></a>
+                </div>
+            </div>
+            <div class="portlet-body">
+                <div class="table-responsive">
+
+                    @(Html.Kendo().Grid<Cats.Areas.EarlyWarning.Models.ContributionDetailViewModel>()
+.Name("grid").Columns(columns =>
 {
-    @Html.Partial("_ContributionLeftBar");
-}
 
-<div>
-    <h4> Pledge by Donor:@ViewBag.DonorID </h4>
+    //columns.Bound(m => m.ContributionDetailID);
+    //columns.Bound(m => m.ContributionID);
+    columns.Bound(m => m.PledgeReferenceNumber);
+    columns.Bound(m => m.PledgeDate).Format("{0:MM/dd/yyyy}");
+    //columns.Bound(m => m.PledgeDatePref).Format("{0:MM/dd/yyyy}").Title(string.Format("Pledge Date ({0})", Html.UserCalendarPreference()));
+    columns.Bound(m => m.Amount).ClientFooterTemplate("<h4>#=kendo.format('{0:N}', sum)#</h4>").Format("{0:N}");
+    columns.ForeignKey(m => m.CurrencyID, (IEnumerable)ViewBag.CurrencyID, "CurrencyID", "Code").Title("Currency");
 
+    // columns.Command(command => command.Destroy());
+    columns.Command(command => command.Custom("Delete").Click("OnDelete"));
+})
+    .ToolBar(toolbar =>
+    {
+        toolbar.Create();
+        toolbar.Save();
+    })
+    .Editable(editable => editable.Mode(GridEditMode.InCell))
+      .Pageable()
+      .Sortable()
+      // .Selectable(t=>t.Mode(GridSelectionMode.Single	))
+      .Filterable()
+      .DataSource(datasource => datasource
+      .Ajax()
+      .Aggregates(aggregates => aggregates.Add(p => p.Amount).Sum())
+        .Model(model =>
+        {
+            model.Id(m => m.ContributionID);
+            model.Field(m => m.ContributionDetailID);
+            //model.Field(m => m.Amount).Editable(true);
+            //model.Field(m => m.PledgeDate).Editable(true);
+            //model.Field(m => m.PledgeReferenceNumber).Editable(true);
+            //model.Field(m => m.CurrencyID).Editable(true);
+        }
+    )
+        .Read(read => read.Action("ContributionDetail_Read", "Contribution", new { id = Model.ContributionID }))
+         .Update(update => update.Action("ContributionDetail_Update", "Contribution"))
+         .Create(create => create.Action("ContributionDetail_Create", "Contribution", new { id = Model.ContributionID }))
+    //.Destroy(destroy=>destroy.Action("ContributionDetail_Destroy","Contribution"))
+    )
+                    )
+                </div>
+            </div>
+        </div>
+
+    </div>
 </div>
 
 <div id="modalWindow">
@@ -24,7 +90,7 @@
 </div>
 <script>
     var wnd;
-    $(document).ready(function () {
+    $(document).ready(function() {
         wnd = $("#modalWindow").kendoWindow({
             title: "Delete confirmation",
             modal: true,
@@ -34,53 +100,9 @@
         }).data("kendoWindow");
     });
 </script>
-@(Html.Kendo().Grid<Cats.Areas.EarlyWarning.Models.ContributionDetailViewModel>() 
-.Name("grid").Columns(columns =>
-    {
 
-        //columns.Bound(m => m.ContributionDetailID);
-        //columns.Bound(m => m.ContributionID);
-        columns.Bound(m => m.PledgeReferenceNumber);
-        columns.Bound(m => m.PledgeDate).Format("{0:MM/dd/yyyy}");
-        //columns.Bound(m => m.PledgeDatePref).Format("{0:MM/dd/yyyy}").Title(string.Format("Pledge Date ({0})", Html.UserCalendarPreference()));
-        columns.Bound(m => m.Amount).ClientFooterTemplate("<h4>#=kendo.format('{0:N}', sum)#</h4>").Format("{0:N}");
-        columns.ForeignKey(m => m.CurrencyID, (IEnumerable)ViewBag.CurrencyID, "CurrencyID", "Code").Title("Currency");
 
-       // columns.Command(command => command.Destroy());
-        columns.Command(command => command.Custom("Delete").Click("OnDelete"));
-    })
-    .ToolBar(toolbar =>
-        {
-            toolbar.Create();
-            toolbar.Save();
-        })
-    .Editable(editable => editable.Mode(GridEditMode.InCell))
-      .Pageable()
-      .Sortable()
-     // .Selectable(t=>t.Mode(GridSelectionMode.Single	))
-      .Filterable()
-      .DataSource(datasource=>datasource
-      .Ajax()
-      .Aggregates(aggregates =>aggregates.Add(p => p.Amount).Sum())
-        .Model(model =>
-            {
-                model.Id(m=>m.ContributionID);
-                model.Field(m => m.ContributionDetailID);
-                //model.Field(m => m.Amount).Editable(true);
-                //model.Field(m => m.PledgeDate).Editable(true);
-                //model.Field(m => m.PledgeReferenceNumber).Editable(true);
-                //model.Field(m => m.CurrencyID).Editable(true);
-            }
-    )
-        .Read(read => read.Action("ContributionDetail_Read", "Contribution",new{id=Model.ContributionID}))
-         .Update(update => update.Action("ContributionDetail_Update", "Contribution"))
-         .Create(create => create.Action("ContributionDetail_Create", "Contribution",new {id=Model.ContributionID}))
-         //.Destroy(destroy=>destroy.Action("ContributionDetail_Destroy","Contribution"))
-    )
-    )
-
-      <script>
-
+<script>
     function OnDelete(e) {
         e.preventDefault();
         var grid = this;
