Addition of Data Entry Indicator to all case team`s Dashboard

--- a/Web/Areas/Logistics/Views/Home/Index.cshtml
+++ b/Web/Areas/Logistics/Views/Home/Index.cshtml
@@ -13,9 +13,8 @@
 
     #region Data Activity Indicator ViewBags
 
-
     //Data Activity Indicator uses ViewBag.PageName to get  Workflows configured for the page
-    ViewBag.PageName = "Earlywarning";
+    ViewBag.PageName = Cats.Services.Workflows.Constants.LogisticsPage;
 
     #endregion
 
