--- a/Web/Areas/Hub/Views/Home/Index.cshtml
+++ b/Web/Areas/Hub/Views/Home/Index.cshtml
@@ -1,7 +1,15 @@
 ﻿@{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
+    //   Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
     const string PAGE_NAME = "HubDashBoard.Index";
+
+    #region Data Activity Indicator ViewBags
+
+    //Data Activity Indicator uses ViewBag.PageName to get  Workflows configured for the page
+    ViewBag.PageName = Cats.Services.Workflows.Constants.HubPage;
+
+    #endregion
 }
 
 @section styles
@@ -111,41 +119,52 @@
             </div>
         </div>
         <div>
-            <div class="row" style="border-bottom-width: thin; border-bottom-color: #666; border-bottom-style: inset; margin-top: 5px">
-                <div class="pull-left">
-                    <h4>Dispatches</h4>
-                </div>
-                <div class="pull-right">
-                    <div class="btn-group">
-                        <button id="RequestHeader" type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown">
-                            <i class="icon-arrow-up"></i>
-                            <i class="icon-arrow-down"></i>
-                        </button>
 
-                    </div>
-                </div>
-            </div>
-            <div id="RequestContent" class="row">
-                <div>&nbsp;</div>
-                <div class="span11">
-                    <div class="portlet">
-                        <div class="portlet-header">
-                            <h3>
-                                <i class=""></i>
-                                Recent Dispatches
-                            </h3>
-                           @* <ul class="portlet-tools pull-right">
-                                <li>
-                                    <button class="btn btn-sm btn-default">
-                                        Show more
-                                    </button>
-                                </li>
-                            </ul>*@
-                        </div>
+            @Html.Partial("_DataActivityIndicator - OldTheme")
 
-                        <!-- /.portlet-header -->
 
-                        <div class="portlet-content">
+
+
+
+
+                  
+
+
+                                <div class="row" style="border-bottom-width: thin; border-bottom-color: #666; border-bottom-style: inset; margin-top: 5px">
+                                    <div class="pull-left">
+                                        <h4>Dispatches</h4>
+                                    </div>
+                                    <div class="pull-right">
+                                        <div class="btn-group">
+                                            <button id="RequestHeader" type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown">
+                                                <i class="icon-arrow-up"></i>
+                                                <i class="icon-arrow-down"></i>
+                                            </button>
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="RequestContent" class="row">
+                                    <div>&nbsp;</div>
+                                    <div class="span11">
+                                        <div class="portlet">
+                                            <div class="portlet-header">
+                                                <h3>
+                                                    <i class=""></i>
+                                                    Recent Dispatches
+                                                </h3>
+                                                @* <ul class="portlet-tools pull-right">
+                                                    <li>
+                                                        <button class="btn btn-sm btn-default">
+                                                            Show more
+                                                        </button>
+                                                    </li>
+                                                </ul>*@
+                                            </div>
+
+                                            <!-- /.portlet-header -->
+
+                                            <div class="portlet-content">
                             <th class="table-responsive">
                                 <table id="" class="table table-striped table-checkable">
                                     <thead>
@@ -157,7 +176,7 @@
                                             <th>Commodity</th>
                                             @*<th>Planned</th>*@
                                             <th>Dispatched (MT)</th>
-                                             <th>Transporter Name</th>
+                                            <th>Transporter Name</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -167,7 +186,7 @@
                                             <td>{{dispach.GIN}}</td>
                                             <td>{{dispach.FDPName}}</td>
                                             <td>{{dispach.Commodity}}</td>
-                                            <td  class="rightAlign">{{dispach.DispatchedAmount}}</td>
+                                            <td class="rightAlign">{{dispach.DispatchedAmount}}</td>
                                             <td>{{dispach.Transporter}}</td>
                                         </tr>
                                     </tbody>
@@ -320,7 +339,7 @@
     'use strict';
 
     // Declare app level module which depends on filters, and services
-    angular.module('myApp', ['myApp.directives']);
+    angular.module('myApp', ['myApp.directives', 'DataEntryIndicatorApp']);
 
 
     /* Controllers */
@@ -435,3 +454,6 @@
   });
 
 </script>
+
+    <script src="~/Scripts/js/DataActivityIndictor/DataActivityIndicator.JS"></script>
+
