--- a/Web/Areas/EarlyWarning/Views/Contribution/ContributionSummary.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Contribution/ContributionSummary.cshtml
@@ -13,66 +13,65 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_CATSLayout.cshtml";
-}
-
-@section Title
-{
-Donors
-}
-@section PageTitle
-{
-    <h1 class="hdr-blck big ">List of Donor Contributions</h1>
-
+    Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
+    ViewBag.PageTitle = Html.Translate("Donors");
+    ViewBag.PageTitleDescription = "";
 }
 <div class="row">
-    @Html.Partial("_ContributionLeftBar");
-    <div class="col-md-10  col-sm-9">
-        <div class=" box box-primary ">
-            <div class="col-md-12 box-body" style="display: block;">
-                <div class="row">
-                    <div class="mrgn5-v form-inline col-md-8">
-                        <div class="form-group">
-                             Select Year to View Contribution Summary  :
-                        @Html.DropDownList("HRDID", null, String.Empty, new { @class = "form-control" })
+    <div class="col-md-2">
+        @Html.Partial("_ContributionLeftBar");
+    </div>
+    <div class="col-md-10">
+        <div class="portlet light bordered ">
+            <div class="portlet-title">
+                <div class="caption font-green-sharp">
+                    <i class="icon-list font-green-sharp"></i>
+                    <span class="caption-subject bold uppercase"> @Html.Translate("List of Donor Contributions")</span>
+                </div>
+                <div class="tools">
+                    <a href="#" class="collapse" data-original-title="" title=""></a>
+                </div>
+                <div class="actions">
+                    @if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.Add_new_contribution))
+{
+                        <a data-buttontype="btn_new_record" class="btn btn-success btn-sm " href="@Url.Action("Create", "Contribution")"><span class="fa fa-plus"></span> @Html.Translate("New Contribution")</a>
+                    }
+                    <a class="btn btn-icon-only btn-default fullscreen" href="javascript:;"></a>
+                </div>
+            </div>
+            <div class="portlet-body">
+                <div class="well row">
+                    <div class="form-group form-horizontal">
+                        <label class="control-label col-md-5"> Select Year to View Contribution Summary:</label>
+                        <div class="col-md-3">
+                            @Html.DropDownList("HRDID", null, String.Empty, new { @class = "form-control" })
                         </div>
-                       
-                    </div>
-                    <div class="mrgn5-v text-right col-md-4">
-                        @if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.Add_new_contribution))
-                        {
-                            <a data-buttontype="btn_new_record" class="btn btn-success btn-sm " href="@Url.Action("Create", "Contribution")"><span class="fa fa-plus"></span> New Contribution</a>
-                        }
-                        
                     </div>
                 </div>
                 <div class="table-responsive">
                     @(Html.Kendo().Grid<Cats.Areas.EarlyWarning.Models.ContributionSummaryViewModel>()
 
-    .Name("grid")
-    .Columns(columns =>
-        {
-            columns.Bound(p => p.Donor);
-            columns.Bound(p => p.Currency);
-            columns.Bound(p => p.Ammount).Title("Amount ").ClientGroupFooterTemplate("Total: #=sum#");
+                            .Name("grid")
+                            .Columns(columns =>
+                            {
+                                columns.Bound(p => p.Donor);
+                                columns.Bound(p => p.Currency);
+                                columns.Bound(p => p.Ammount).Title("Amount ").ClientGroupFooterTemplate("Total: #=sum#");
 
-        })
-        .Pageable()
-    .DataSource(datasource => datasource.Ajax()
-        .Aggregates(aggregates => aggregates.Add(p => p.Ammount).Sum())
-        .Group(group => group.Add(m => m.Donor))
-        .PageSize(8)
-     .Read(read => read.Action("ContributionSummary_Read", "Contribution").Data("filterData")))
-      .Groupable())
+                            })
+                            .Pageable()
+                            .DataSource(datasource => datasource.Ajax()
+                                .Aggregates(aggregates => aggregates.Add(p => p.Ammount).Sum())
+                                .Group(group => group.Add(m => m.Donor))
+                                .PageSize(8)
+                                .Read(read => read.Action("ContributionSummary_Read", "Contribution").Data("filterData")))
+                            .Groupable())
                 </div>
             </div>
-
-
         </div>
+
     </div>
-
 </div>
-
 
 
 
