--- a/Web/Areas/EarlyWarning/Views/Contribution/InkindDetails.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Contribution/InkindDetails.cshtml
@@ -1,119 +1,127 @@
 ﻿@using System.Collections
+@using Cats.Helpers
 @using Kendo.Mvc.UI
 @model  Cats.Models.Contribution
+
 @{
-    ViewBag.Title = "detail";
-    Layout = "~/Views/Shared/_CATSLayout.cshtml";
-}
-
-@section Title
-{
-Donors
-}
-@section PageTitle
-{
-    <h1 class="hdr-blck big "> Pledge by Donor:@ViewBag.DonorID </h1>
-
+    ViewBag.Title = "Details";
+    //Layout = "~/Views/Shared/_MainLayout.cshtml";
+    Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
+    ViewBag.PageTitle = Html.Translate("Pledge by Donor: ") + ViewBag.DonorID;
+    ViewBag.PageTitleDescription = "In-Kind";
 }
 <div class="row">
-    @Html.Partial("_ContributionLeftBar");
-    <div class="col-md-10  col-sm-9">
-        <div class=" box box-primary ">
-            <div class="col-md-12 box-body" style="display: block;">
+    <div class="col-md-2">
+        @Html.Partial("_ContributionLeftBar");
+    </div>
+    <div class="col-md-10">
+        <div class="portlet light bordered ">
+            <div class="portlet-title">
+                <div class="caption font-green-sharp">
+                    <i class="icon-list font-green-sharp"></i>
+                    <span class="caption-subject bold uppercase"> @Html.Translate("Pledge Lists")</span>
+                </div>
+                <div class="tools">
+                    <a href="#" class="collapse" data-original-title="" title=""></a>
+                </div>
+                <div class="actions">
+
+                    <a class="btn btn-icon-only btn-default fullscreen" href="javascript:;"></a>
+                </div>
+            </div>
+            <div class="portlet-body">
                 <div class="table-responsive">
-                    @(Html.Kendo().Grid<Cats.Areas.EarlyWarning.Models.InKindContributionDetailViewModel>() 
+                    @(Html.Kendo().Grid<Cats.Areas.EarlyWarning.Models.InKindContributionDetailViewModel>()
 .Name("grid").Columns(columns =>
-    {
+{
 
-        //columns.Bound(m => m.ContributionDetailID);
-        //columns.Bound(m => m.ContributionID);
-        columns.Bound(m => m.ReferencNumber);
-        columns.Bound(m => m.ContributionDate).Format("{0:MM/dd/yyyy}");
-        columns.ForeignKey(m => m.CommodityID, (IEnumerable)ViewBag.CommodityID, "CommodityID", "Name").Title("Commodity");
-        columns.Bound(m => m.Amount).ClientFooterTemplate("<h4>#=kendo.format('{0:N0}', sum)#</h4>").Format("{0:N0}").HtmlAttributes(new { align = "Right" }); 
+    //columns.Bound(m => m.ContributionDetailID);
+    //columns.Bound(m => m.ContributionID);
+    columns.Bound(m => m.ReferencNumber);
+    columns.Bound(m => m.ContributionDate).Format("{0:MM/dd/yyyy}");
+    columns.ForeignKey(m => m.CommodityID, (IEnumerable)ViewBag.CommodityID, "CommodityID", "Name").Title("Commodity");
+    columns.Bound(m => m.Amount).ClientFooterTemplate("<h4>#=kendo.format('{0:N0}', sum)#</h4>").Format("{0:N0}").HtmlAttributes(new { align = "Right" });
 
-       // columns.Command(command => command.Destroy());
-        columns.Command(command => command.Custom("Delete").Click("OnDelete"));
-    })
+    // columns.Command(command => command.Destroy());
+    columns.Command(command => command.Custom("Delete").Click("OnDelete"));
+})
         .ToolBar(toolbar =>
-            {
-                toolbar.Create();
-                toolbar.Save();
-            })
+        {
+            toolbar.Create();
+            toolbar.Save();
+        })
     .Editable(editable => editable.Mode(GridEditMode.InCell))
       .Pageable()
       .Sortable()
       .Events(e => e.DataBound("onDataBound"))
       .Filterable()
-      .DataSource(datasource=>datasource
+      .DataSource(datasource => datasource
       .Ajax()
-      .Aggregates(aggregates =>aggregates.Add(p => p.Amount).Sum())
+      .Aggregates(aggregates => aggregates.Add(p => p.Amount).Sum())
         .Model(model =>
-            {
-                model.Id(m=>m.ContributionID);
-                model.Field(m => m.InKindContributionDetailID);
-                //model.Field(m => m.Amount).Editable(true);
-                //model.Field(m => m.PledgeDate).Editable(true);
-                //model.Field(m => m.PledgeReferenceNumber).Editable(true);
-                //model.Field(m => m.CurrencyID).Editable(true);
-            }
+        {
+            model.Id(m => m.ContributionID);
+            model.Field(m => m.InKindContributionDetailID);
+            //model.Field(m => m.Amount).Editable(true);
+            //model.Field(m => m.PledgeDate).Editable(true);
+            //model.Field(m => m.PledgeReferenceNumber).Editable(true);
+            //model.Field(m => m.CurrencyID).Editable(true);
+        }
     )
-        .Read(read => read.Action("InKindContributionDetail_Read", "Contribution",new{id=Model.ContributionID}))
+        .Read(read => read.Action("InKindContributionDetail_Read", "Contribution", new { id = Model.ContributionID }))
         .Update(update => update.Action("InKindContributionDetail_Update", "Contribution"))
         .Create(create => create.Action("InKindContributionDetail_Create", "Contribution", new { id = Model.ContributionID }))
-         .Destroy(destroy=>destroy.Action("ContributionDetail_Destroy","Contribution"))
+         .Destroy(destroy => destroy.Action("ContributionDetail_Destroy", "Contribution"))
     )
-    )
+                    )
 
                 </div>
-
-
             </div>
         </div>
 
     </div>
 </div>
+
 <div class="modal" id="cats-modal">
-<div class="modal-dialog modal-sm">
-    <div class="modal-content">
-      
-        <div class="modal-header">
-          <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
-          <h4 id="myModalLabel" class="modal-title">Delete Contribution</h4>
-        </div>
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
+                <h4 id="myModalLabel" class="modal-title">Delete Contribution</h4>
+            </div>
 
 
             <div class="modal-body">
-              
+
                 <p>
-                   Are You Sure You Want to Delete this Contribution?
+                    Are You Sure You Want to Delete this Contribution?
                 </p>
 
             </div>
             <div class="modal-footer">
                 <button id="yes" class="btn btn-primary" type="submit">Yes</button>
-                <button id="no"class="btn" data-dismiss="modal" aria-hidden="true">No</button>
+                <button id="no" class="btn" data-dismiss="modal" aria-hidden="true">No</button>
             </div>
-   
-       
+
+
+        </div>
     </div>
 </div>
-    </div>
 
+<script>
+    function onDataBound(e) {
 
+        $(".table-responsive .k-button.k-grid-Delete").removeClass("k-button")
+            .addClass("btn btn-xs mrgn3-b")
+            .addClass("btn-danger");
+        $(".table-responsive .k-grid-Delete")
+            .find('span')
+            .addClass("fa fa-times")
+            .css({ "margin-right": "5px" });
 
-      <script>
-          function onDataBound(e) {
+    }
 
-              $(".table-responsive .k-button.k-grid-Delete").removeClass("k-button")
-                  .addClass("btn btn-xs mrgn3-b")
-                  .addClass("btn-danger");
-              $(".table-responsive .k-grid-Delete")
-                    .find('span')
-                    .addClass("fa fa-times")
-                    .css({ "margin-right": "5px" });
-            
-          }
     function OnDelete(e) {
         e.preventDefault();
         var grid = this;
