Added Data Activity Indicator Partial for the Old Theme

--- a/Web/Views/Shared/_DataActivityIndicator.cshtml
+++ b/Web/Views/Shared/_DataActivityIndicator.cshtml
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="portlet-body">
-                <span class="loading-spnr-da da-data-indicator-ldng"><img src="~/Content/images/loading.gif" alt="loading..." class="loading-spinner"></span>
+                @*<span class="loading-spnr-da da-data-indicator-ldng"><img src="~/Content/images/loading.gif" alt="loading..." class="loading-spinner"></span>*@
 
 
                     <div class="table-responsive" style="overflow-x: hidden; min-height: 350px;">
