fix for graph redrawing only when clikced twice

--- a/Web/Views/Shared/_DataActivityIndicator - OldTheme.cshtml
+++ b/Web/Views/Shared/_DataActivityIndicator - OldTheme.cshtml
@@ -17,7 +17,7 @@
         /*border: 1px solid #ddd;*/
         padding-left: 0px;
         padding-top: 5px;
-        min-height: 100px;
+        min-height: 0px;
     }
 
     .truseractivity {
@@ -119,7 +119,7 @@
                                 <td>
                                 <div class="col-sm-2 ">
                                     <Label><small> Get</small></Label>
-                                    <button type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="top" ng-click="applyFilter()" title="Search"><i class="icon-search"></i></button>
+                                    <button type="button" class="btn  btn-warning" data-toggle="tooltip" data-placement="top" ng-click="applyFilter()" title="Search"><i class="icon-search"></i></button>
                                 </div>
                                 </td>
                             </tr>
