--- a/Web/Views/Shared/_DataActivityIndicator.cshtml
+++ b/Web/Views/Shared/_DataActivityIndicator.cshtml
@@ -111,7 +111,7 @@
 
                                 <div class="col-sm-2 ">
                                   
-                                    <button type="button" ng-disabled="searching" class="btn btn-danger" data-toggle="tooltip" data-placement="top" ng-click="applyFilter()" title="Search"><i ng-show="!searching" class ="fa fa-search ">Get</i>  <i class="fa fa-cog fa-spin" ng-show="searching"></i> </button>
+                                    <button type="button" ng-disabled="searching" class="btn green " data-toggle="tooltip" data-placement="top" ng-click="applyFilter()" title="Search"><i ng-show="!searching" class ="fa fa-search ">Get</i>  <i class="fa fa-cog fa-spin" ng-show="searching"></i> </button>
                                 </div>
 
                             </div>
